<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zinro" />
    <SeekBar
        android:id="@+id/SBzinro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="1"
        android:max="10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uranai" />
    <SeekBar
        android:id="@+id/SBuranai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="1"
        android:max="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kishi" />
    <SeekBar
        android:id="@+id/SBkishi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="1"
        android:max="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reibai" />
    <SeekBar
        android:id="@+id/SBreibai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="1"
        android:max="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person" />
    <SeekBar
        android:id="@+id/SBmurabito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="1"
        android:max="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fox" />
    <SeekBar
        android:id="@+id/SBkitsune"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="1"
        android:max="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/haitoku" />
    <SeekBar
        android:id="@+id/SBhaitoku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="1"
        android:max="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Bcancell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/Bstart_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_start"/>
    </LinearLayout>

</LinearLayout>
